# my_kurs_1

./: README.md  pyproject.toml  requirements.txt
src/: utils.py  views.py
tests/: test_reports.py
